tests/invalid/char_type_error.alu
function () do
begin
char c = "not a char";
end
test
